--- a/Website 5/index.html
+++ b/Website 5/index.html
@@ -10,7 +10,7 @@
 <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash" rel="stylesheet">
 	 <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
 
-<title>Lorem Ipsum </title>
+<title>Lorem Ipsum2 </title>
 <!-- Required meta tags -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
