--- a/Website 5/index.html
+++ b/Website 5/index.html
@@ -7,10 +7,13 @@
     <link rel="icon" href="images/fox.ico" />
 
 
+
+
+<title>Lorem Ipsum2 </title>
+
 <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash" rel="stylesheet">
 	 <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
 
-<title>Lorem Ipsum2 </title>
 <!-- Required meta tags -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -33,18 +36,18 @@
 	         </div>
 	         <div class="collapse navbar-collapse" id="myNavbar">
 	            <ul class="nav navbar-nav">
-	               <li><a href="home.html">Home</a></li>
-	               <li><a href="food.html">Food</a></li>
-	               <li><a href="music.html">Music</a></li>
-	               <li class="current_nav"><a href="movie.html">Movies</a></li>
-						<li><a href="vaca.html">Vacation</a></li>
+	               <li><a href="home.html"> <h5> Home </h5> </a></li>
+	               <li><a href="food.html"> <h5> Food </h5> </a></li>
+	               <li><a href="music.html"> <h5> Music </h5> </a></li>
+	               <li class="current_nav"><a href="movie.html"> <h5> Movies </h5> </a></li>
+						<li><a href="vaca.html"> <h5> Vacation </h5> </a></li>
 	           </ul>
 	         </div>
 	      </div>
 	   </nav>
-<h5>
-The Rabbit
-</h5>
+
+
+<h1> The Rabbit </h1>
 
 
 </body>
