--- a/Website 5/index.html
+++ b/Website 5/index.html
@@ -36,11 +36,11 @@
 	         </div>
 	         <div class="collapse navbar-collapse" id="myNavbar">
 	            <ul class="nav navbar-nav">
-	               <li><a href="home.html"> <h5> Home </h5> </a></li>
-	               <li><a href="food.html"> <h5> Food </h5> </a></li>
-	               <li><a href="music.html"> <h5> Music </h5> </a></li>
-	               <li class="current_nav"><a href="movie.html"> <h5> Movies </h5> </a></li>
-						<li><a href="vaca.html"> <h5> Vacation </h5> </a></li>
+	               <li class="current_nav"><a href="home.html"> <h4> Etiam </h4> </a></li>
+	               <li><a href="food.html"> <h4> Sed </h4> </a></li>
+	               <li><a href="music.html"> <h4> Nam </h4> </a></li>
+	               <li><a href="movie.html"> <h4> Suspendisse </h4> </a></li>
+						<li><a href="vaca.html"> <h4> Curabitur </h4> </a></li>
 	           </ul>
 	         </div>
 	      </div>
