--- a/Website 5/index.html
+++ b/Website 5/index.html
@@ -36,7 +36,7 @@
 	         </div>
 	         <div class="collapse navbar-collapse" id="myNavbar">
 	            <ul class="nav navbar-nav">
-	               <li class="current_nav"><a href="home.html"> <h4> Etiam </h4> </a></li>
+	               <li class="current_nav"><a href="index.html"> <h4> Etiam </h4> </a></li>
 	               <li><a href="elephant.html"> <h4> Sed </h4> </a></li>
 	               <li><a href="elephant.html"> <h4> Nam </h4> </a></li>
 	               <li><a href="elephant.html"> <h4> Suspendisse </h4> </a></li>
