--- a/Website 5/index.html
+++ b/Website 5/index.html
@@ -10,9 +10,12 @@
 
 
 <title>Lorem Ipsum2 </title>
-
+<!-- h1 -->
 <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash" rel="stylesheet">
+<!-- h4 -->
 	 <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
+	 <!-- h6 -->
+	 <link href="https://fonts.googleapis.com/css?family=Arapey" rel="stylesheet">
 
 <!-- Required meta tags -->
 <meta charset="utf-8">
@@ -47,30 +50,39 @@
 	   </nav>
 
 <div class="col-xs-10 col-sm-8 col-md-3 col-lg-2"><h1> The Rabbit </h1>
-Vestibulum semper molestie convallis. Nam sed leo quis orci condimentum semper eu sed nisl. Nunc rutrum pellentesque quam, ac vulputate neque auctor sed. Nunc luctus arcu vitae posuere consectetur. Quisque consectetur ipsum eu aliquet tempus. Vestibulum molestie nibh vitae felis fermentum lacinia. Sed elementum ipsum eros, nec fringilla nibh consectetur a. Vivamus interdum pulvinar sem. Mauris vel sapien blandit, convallis lectus eu, efficitur odio. Aliquam in sagittis eros. Nulla id laoreet nunc. Duis sed fermentum eros, id malesuada risus. Duis quis magna diam.
+	<h6>
+Vestibulum semper molestie convallis. Nam sed leo quis orci condimentum semper eu sed nisl. Nunc rutrum pellentesque quam, ac vulputate neque auctor sed. Nunc luctus arcu vitae posuere consectetur. Quisque consectetur ipsum eu aliquet tempus. Vestibulum molestie nibh vitae felis fermentum lacinia. Sed elementum ipsum eros, nec fringilla nibh consectetur a. Vivamus interdum pulvinar sem. Mauris vel sapien blandit, convallis lectus eu, efficitur odio. Aliquam in sagittis eros. Nulla id laoreet nunc. Duis sed fermentum eros, id malesuada risus. Duis quis magna diam. </h6>
 </div>
 <div class="col-xs-10 col-sm-8 col-md-3 col-lg-2"><h1> The Dog </h1>
+	<h6>
 Mauris vitae arcu vitae diam venenatis aliquet. Nullam a egestas lectus, in consequat sapien. Curabitur iaculis accumsan tortor a dapibus. Ut est metus, pharetra eget cursus nec, dictum vel lectus. In quis volutpat purus, vel laoreet ligula. Sed vel augue sed nulla ornare scelerisque. Praesent id elit nibh. Mauris consectetur blandit arcu hendrerit condimentum. Maecenas ac laoreet lorem.
+</h6>
 </div>
 <div class="col-xs-10 col-sm-8 col-md-3 col-lg-2"><h1> The Mouse </h1>
+	<h6>
 Aenean tincidunt vitae tellus sit amet rhoncus. Mauris a lectus turpis. In molestie volutpat neque nec malesuada. Morbi pharetra dui sed nisi condimentum euismod. Fusce eget mattis eros. Phasellus laoreet odio nisl, non egestas arcu suscipit eget. Duis hendrerit, lacus et placerat bibendum, mauris velit semper massa, eu vulputate tortor velit vel quam. Duis mollis commodo nisl, at euismod diam.
+</h6>
 </div>
 <div class="col-xs-10 col-sm-8 col-md-3 col-lg-2"><h1> The Hedgehog </h1>
+	<h6>
 Ut dapibus gravida eros vitae eleifend. Mauris pellentesque eros eros, eu molestie augue fermentum vel. Sed feugiat, orci non volutpat ultrices, sem metus consectetur nulla, sit amet elementum purus tellus sed nisi. Nulla malesuada sit amet felis lacinia commodo. Donec mattis odio nec sem dapibus dictum. Proin consequat a nulla vel aliquam. Aenean eget laoreet felis.
+</h6>
 </div>
 <div class="col-xs-10 col-sm-8 col-md-3 col-lg-2"><h1> The Fish </h1>
+	<h6>
 Fusce egestas porta leo. Maecenas justo est, suscipit vitae quam efficitur, facilisis maximus purus. Sed eu laoreet erat. Fusce sagittis enim justo, eget facilisis sem ultricies at. Praesent vitae semper mi, in accumsan purus. Maecenas sed purus nec felis tincidunt volutpat eu nec dolor. Morbi egestas lectus ac dolor posuere aliquet. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nam pharetra scelerisque ullamcorper.
+</h6>
 </div>
 <div class="col-xs-10 col-sm-8 col-md-3 col-lg-2">
 <h1> The Turtle </h1>
-
+<h6>
 Ut bibendum placerat mi et consectetur. Ut sodales tincidunt ipsum. Aenean sit amet arcu sed erat ullamcorper ornare. Morbi ante sapien, mollis eget rhoncus eu, ultrices viverra massa. Nulla facilisi. Maecenas rutrum aliquam risus et tincidunt. Cras vitae enim orci. Donec in mattis elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ultricies eros nec magna fringilla auctor.
-</div>
+</h6> </div>
 <div class="col-xs-10 col-sm-8 col-md-3 col-lg-2">
 <h1> The Otter </h1>
-
+<h6>
 Ut bibendum placerat mi et consectetur. Ut sodales tincidunt ipsum. Aenean sit amet arcu sed erat ullamcorper ornare. Morbi ante sapien, mollis eget rhoncus eu, ultrices viverra massa. Nulla facilisi. Maecenas rutrum aliquam risus et tincidunt. Cras vitae enim orci. Donec in mattis elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ultricies eros nec magna fringilla auctor.
-</div>
+</h6> </div>
 
 </body>
 </html>
